# Bosch_Internship_DaoHongMinh

./: test  test.py
Agent/: .gitignore  README.md  agent.py  config.py  main.py  prompts.py  requirements.txt  settings.gemini.example.json  settings.json  settings.lmstudio.example.json
Agent/data/: calendar_events.json
Agent/doc/: doc.rst
Agent/docs/: doc.rst
Agent/provider/: __init__.py  base.py  gemini_provider.py  ollama_provider.py  openai_compatible_provider.py
Agent/scripts/: list_lm_studio_models.py  test_lm_studio_embedding.py
Agent/src/personal_agent/: __init__.py  agent.py  config.py  prompts.py
Agent/src/personal_agent/memory/: __init__.py
Agent/src/personal_agent/providers/: __init__.py  gemini_provider.py  ollama_provider.py  openai_compatible_provider.py
Agent/src/personal_agent/safety/: __init__.py  audit_log.py  path_safety.py  permissions.py
Agent/src/personal_agent/tools/: __init__.py  browser_tools.py  calendar_tools.py  email_tools.py  file_tools.py  git_tools.py  note_tools.py  registry.py  schemas.py  system_tools.py  task_tools.py
Agent/tools/: __init__.py  file_tools.py  path_safety.py  registry.py  schemas.py
BasicCanPractice/: anchor.py  canRx.py  canTx.py  vnodeA.py  vnodeB.py
Key_Exchange_lib/diagram/: class.puml  flow.puml  revised_sequence.puml  sequence.puml
Key_Exchange_lib/lib/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
Key_Exchange_lib/lib/include/: KeyExchange_Interface.h
Key_Exchange_lib/lib/src/: KeyExchange_Interface.cpp  KeyExchange_Service.cpp  KeyExchange_Service.hpp
Key_Exchange_lib/lib/src/keyexchange/: _native.py
Key_Exchange_lib/lib/src/keyexchange.egg-info/: PKG-INFO  SOURCES.txt
Key_Exchange_lib/lib/test/: test.py
SDV_diagrams/: Activity_Diagram.puml  CanTP_Class.puml  Detailed_KeyExchange_Class_Diagram.puml  general_class_diagram.puml
cpplib/: setup.py  test.py
cpplib/srccpp/: binding.cpp  math.cpp  math.hpp
diagrams/: CanTP_Class.puml  Cryptography_Class.puml  Detailed_Class_Diagram.puml  Detailed_KeyExchange_Class_Diagram.puml  Differentiate_Datapath.puml  Msg_handler.puml  SecOC_Sequence_Diagram.puml  class.txt  general_class_diagram.puml  general_state_machine.puml  general_state_machine.txt  secoc_state_machine.puml  secoc_state_machine.txt
key_exchange_test/: Key_Exchange_System_Overview_Test.py  test.py
libtest/: bosch_signature_calculation.py  encrypted_key.txt  receiver.py  req.txt  sender.py  test.py  wake.py
libtest/libtestlib/: README.md  example.py  example_config.json  pyproject.toml
libtest/libtestlib/src/anchor_keyexchange/: client.py
libtest/libtestlib/src/anchor_keyexchange.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test python lib creation/examples/: test_python.py
test python lib creation/include/arith/: arith.h
test python lib creation/python/: simplearith_module.c
test python lib creation/src/: basic.c  errors.c  vector.c
testlib/: API.cpp  CMakeLists.txt  manager.cpp  operator.cpp  wrapper.cpp  wrapper.h
